...
          showPayMember: false,
          showPaymentInfoTab: true,
          markActions: [],
          linkActions: [],
          showActionTimeButton: false,
          themeColor: TopicThemeColor.emeraldGreen,
          displayName: '移動コスト（給油から計算）',
          showNameField: false,
          showMarkDate: true,
          showMarkMembers: false,
          showLinkDate: true,
        ),
      TopicType.movingCostEstimated => const TopicConfig(
...
          showPayMember: true,
          showPaymentInfoTab: true,
          markActions: [],
          linkActions: [],
          showActionTimeButton: false,
          themeColor: TopicThemeColor.emeraldGreen,
          displayName: '移動コスト（燃費で推定）',
          showNameField: false,
          showMarkDate: true,
          showMarkMembers: false,
          showLinkDate: true,
        ),
      TopicType.travelExpense => const TopicConfig(
...
